--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "dorky-markov",
+  "homepage": "https://the-simian.github.io/dorky-markov",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
@@ -16,12 +18,12 @@
   "bugs": {
     "url": "https://github.com/the-simian/dorky-markov"
   },
-  "homepage": "https://github.com/the-simian/dorky-markov#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
     "cors-anywhere": "^0.4.0",
     "express": "^4.15.2",
+    "gh-pages": "^1.1.0",
     "method-override": "^2.3.7",
     "morgan": "^1.8.1",
     "response-time": "^2.3.2"
